...
            ),
          ),
        if (Constants.featureLoadSampleData)
          StoreConnector<AppState, AppState>(
            converter: (store) => store.state,
            builder: (context, state) => MenuButton(
              text: 'Add Sample Card',
              iconData: Icons.arrow_right,
              onPressed: () {
                if (state.cards.where((card) => card.number == BankCard.sample().number).isNotEmpty) {
                  ScaffoldMessenger.of(context).showSnackBar(const SnackBar(
                    content: Text('Sample card already added'),
                    duration: Duration(milliseconds: 1000),
...
