...
    return StoreConnector<AppState, AppState>(
        converter: (store) => store.state,
        builder: (context, state) {
          return Scaffold(
            backgroundColor: Styles.listBackgroundColor,
            appBar: AppBar(
              title: const Text('Add Bank Card'),
              backgroundColor: Styles.listBackgroundColor,
            ),
            body: Padding(
              padding: const EdgeInsets.all(20),
              child: NewCardForm(
                existingCardNumbers: state.cards.map((c) => c.number).toList(),
...
